<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="button_00">0</string>
    <string name="button_01">1</string>
    <string name="button_02">2</string>
    <string name="button_03">3</string>
    <string name="button_04">4</string>
    <string name="button_05">5</string>
    <string name="button_06">6</string>
    <string name="button_07">7</string>
    <string name="button_08">8</string>
    <string name="button_09">9</string>
    <string name="button_Add">+</string>
    <string name="button_Clear">CE</string>
    <string name="button_Dot">.</string>
    <string name="button_Minus">-</string>
    <string name="button_Multiply">*</string>
    <string name="button_Result">=</string>
    <string name="button_Divide">/</string>
    <string name="edit_text"></string>
</resources>