<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edit_text"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor,VisualLintTextFieldSize,SpeakableTextPresentCheck" />

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="@string/button_07"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <Button
                android:id="@+id/btn08"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="@string/button_08"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="@string/button_09"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="@string/button_Add"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="@string/button_04"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <Button
                android:id="@+id/btn05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="@string/button_05"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="@string/button_06"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="@string/button_Minus"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="@string/button_01"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <Button
                android:id="@+id/btn02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="@string/button_02"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="@string/button_03"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="@string/button_Divide"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="@string/button_Clear"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights,VisualLintButtonSize" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="@string/button_00"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="@string/button_Dot"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="@string/button_Multiply"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnResultClick"
            android:text="@string/button_Result"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>